--- a/MutipleTableView/MutipleTableView/Base.lproj/Main.storyboard
+++ b/MutipleTableView/MutipleTableView/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,10 +21,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZkA-Ma-mGx" userLabel="LeftView">
+                                <rect key="frame" x="0.0" y="20" width="112.5" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2TJ-wh-qeQ" userLabel="RightView">
+                                <rect key="frame" x="112.5" y="20" width="262.5" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="2TJ-wh-qeQ" secondAttribute="trailing" id="7Pg-AR-pWW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ZkA-Ma-mGx" secondAttribute="bottom" id="GuF-jS-6mL"/>
+                            <constraint firstItem="2TJ-wh-qeQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Ldr-vj-rBK"/>
+                            <constraint firstItem="ZkA-Ma-mGx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" id="SuN-8w-lvo"/>
+                            <constraint firstItem="ZkA-Ma-mGx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aSH-Eg-MXO"/>
+                            <constraint firstItem="ZkA-Ma-mGx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gia-KS-dNg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2TJ-wh-qeQ" secondAttribute="bottom" id="nts-ar-JoS"/>
+                            <constraint firstItem="2TJ-wh-qeQ" firstAttribute="leading" secondItem="ZkA-Ma-mGx" secondAttribute="trailing" id="x1f-sa-O2A"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftView" destination="ZkA-Ma-mGx" id="dTZ-vj-mcw"/>
+                        <outlet property="rightView" destination="2TJ-wh-qeQ" id="NGC-C6-M5v"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-551" y="-33"/>
+        </scene>
+        <!--LeftTable-->
+        <scene sceneID="Cmf-pA-f5y">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oCP-sS-BYU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="left" title="LeftTable" id="MYs-Lz-LCw" customClass="LeftTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jng-kj-Mcl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="HZM-DO-thU">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HZM-DO-thU" id="op6-iO-W4K">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MYs-Lz-LCw" id="hQ3-cz-xoF"/>
+                            <outlet property="delegate" destination="MYs-Lz-LCw" id="OYb-nH-gDC"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="7eh-A9-z8I" kind="show" id="uoU-l4-5Na"/>
+                    </connections>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="172" y="-270"/>
+        </scene>
+        <!--RightTable-->
+        <scene sceneID="BnZ-Jb-Xu4">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ksb-z6-WrT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController storyboardIdentifier="right" title="RightTable" id="se7-T2-mlK" customClass="RightTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="n1D-I7-jtP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8wH-wD-1Uj">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8wH-wD-1Uj" id="h5b-DC-r2o">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="se7-T2-mlK" id="Kh9-G3-gA1"/>
+                            <outlet property="delegate" destination="se7-T2-mlK" id="wy3-ur-cHi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="xAB-fS-qao"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="172" y="449"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zfu-FD-nlT">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j3H-wf-bbg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="subLeft" id="7eh-A9-z8I" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZTr-U0-EpM"/>
+                        <viewControllerLayoutGuide type="bottom" id="0Xt-UU-KNm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FU1-SQ-8iu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
             </objects>
         </scene>
     </scenes>
